src/pyflakes/snapshots/ruff__pyflakes__tests__F503_F503.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    PercentFormatExpectedSequence: ~
  location:
    row: 17
    column: 0
  end_location:
    row: 17
    column: 24
  fix: ~
  parent: ~
- kind:
    PercentFormatExpectedSequence: ~
  location:
    row: 18
    column: 0
  end_location:
    row: 18
    column: 28
  fix: ~
  parent: ~
- kind:
    PercentFormatExpectedSequence: ~
  location:
    row: 23
    column: 0
  end_location:
    row: 23
    column: 42
  fix: ~
  parent: ~

