src/pyflakes/snapshots/ruff__pyflakes__tests__F503_F50x.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    PercentFormatExpectedSequence: ~
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 20
  fix: ~
  parent: ~

