src/pyflakes/snapshots/ruff__pyflakes__tests__F504_F504.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    PercentFormatExtraNamedArguments:
      - b
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 34
  fix:
    location:
      row: 3
      column: 16
    end_location:
      row: 3
      column: 34
    content: "{a: \"?\", }"
    message: ~
  parent: ~
- kind:
    PercentFormatExtraNamedArguments:
      - b
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 29
  fix:
    location:
      row: 8
      column: 10
    end_location:
      row: 8
      column: 29
    content: "{\"a\": 1, }"
    message: ~
  parent: ~
- kind:
    PercentFormatExtraNamedArguments:
      - b
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 29
  fix:
    location:
      row: 9
      column: 10
    end_location:
      row: 9
      column: 29
    content: "{'a': 1, }"
    message: ~
  parent: ~

