src/pyflakes/snapshots/ruff__pyflakes__tests__F504_F50x.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    PercentFormatExtraNamedArguments:
      - baz
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 32
  fix:
    location:
      row: 8
      column: 12
    end_location:
      row: 8
      column: 32
    content: "{'bar': 1, }"
    message: ~
  parent: ~

