src/pyflakes/snapshots/ruff__pyflakes__tests__F505_F50x.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    PercentFormatMissingArgument:
      - bar
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 14
  fix: ~

