src/pyflakes/snapshots/ruff__pyflakes__tests__F508_F50x.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind: PercentFormatStarRequiresSequence
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 27
  fix: ~

