src/pyflakes/snapshots/ruff__pyflakes__tests__F521_F521.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    StringDotFormatInvalidFormat: "Single '{' encountered in format string"
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 13
  fix: ~
- kind:
    StringDotFormatInvalidFormat: "Single '}' encountered in format string"
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 13
  fix: ~
- kind:
    StringDotFormatInvalidFormat: "Expected '}' before end of string"
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 22
  fix: ~
- kind:
    StringDotFormatInvalidFormat: Max string recursion exceeded
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 26
  fix: ~
- kind:
    StringDotFormatInvalidFormat: Empty attribute in format string
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 29
  fix: ~
- kind:
    StringDotFormatInvalidFormat: Empty attribute in format string
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 23
  fix: ~
- kind:
    StringDotFormatInvalidFormat: Empty attribute in format string
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 26
  fix: ~

